--- a/cmb-portfolio/deploy.yaml
+++ b/cmb-portfolio/deploy.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: cmb-portfolio-nginx
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: cmb-portfolio-nginx
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: cmb-portfolio-nginx
-          image: harbor.coinmarketboards.com/dev-test/nginx:latest
+          image: harbor.coinmarketboards.com/dev-test/nginx:1.27-alpine
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 80
