--- a/cmb-portfolio/deploy.yaml
+++ b/cmb-portfolio/deploy.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: cmb-portfolio-nginx
-          image: harbor.coinmarketboards.com/dev-test/nginx:latest
+          image: harbor.coinmarketboards.com/dev-test/nginx:1.27-alpine
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 80
